In alle .js-bestanden de opdrachtbeschrijving gekopieerd. Opdracht 1 afgerond

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Tech It Easy Dashboard</title>
 </head>
 
-<script src=""></script>
 <body>
 
+
+
+
+
+
+
+<script src="main.js"></script>
+
+<script src="Opdracht-1.js"></script>
+<script src="Opdracht-2.js"></script>
+<script src="Opdracht-3.js"></script>
+<script src="Opdracht-4.js"></script>
+<script src="Opdracht-5.js"></script>
 </body>
 </html>
