--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 
 <body>
 
+<p> Het aantal boeken dat we hebben verkocht is <span id="tvs-sold">[aantal verkochte boeken]</span></p>
 
+<br>
+
+<p>Het aantal boeken dat we hebben ingekocht is <span id="tvs-bought">[Aantal ingekochte boeken</span></p>
+
+<br>
+
+<p>Het aantal boeken dat we dus nog moeten verkopen is <span id="tvs-to-sell">[Aantal te verkopen boeken]</span> !</p>
 
 
 
 
 
 <script src="main.js"></script>
-
 <script src="Opdracht-1.js"></script>
 <script src="Opdracht-2.js"></script>
 <script src="Opdracht-3.js"></script>
